# itmo-classic-ml-course

./: .gitignore  README.MD  pyproject.toml
src/: classification_models.ipynb  clusterization.ipynb  linear_regression.ipynb  polynomial_regression_and_regularization.ipynb
